[gd_scene load_steps=6 format=3 uid="uid://clgg0guv3rshf"]

[ext_resource type="Script" path="res://scripts/item_artifact.gd" id="1_ny2c6"]
[ext_resource type="Texture2D" uid="uid://bulxt058rvmt7" path="res://assets/resources/defaultItem.png" id="2_61jg0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jk0ro"]
radius = 105.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gesh"]
size = Vector2(2, 2)

[sub_resource type="CircleShape2D" id="CircleShape2D_fprp6"]
radius = 18.0278

[node name="item_artifact" type="CharacterBody2D" groups=["Items"]]
collision_layer = 0
collision_mask = 3
script = ExtResource("1_ny2c6")

[node name="Vacuum_Zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vacuum_Zone"]
shape = SubResource("CircleShape2D_jk0ro")

[node name="icon_sprite" type="Sprite2D" parent="."]
scale = Vector2(2.428, 2.428)
texture = ExtResource("2_61jg0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2gesh")

[node name="Pickup_Zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup_Zone"]
shape = SubResource("CircleShape2D_fprp6")

[connection signal="body_entered" from="Vacuum_Zone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Vacuum_Zone" to="." method="_on_vacuum_zone_body_entered"]
[connection signal="body_exited" from="Vacuum_Zone" to="." method="_on_vacuum_zone_body_exited"]
[connection signal="body_exited" from="Vacuum_Zone" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Pickup_Zone" to="." method="_on_pickup_zone_body_entered"]
